helm/charts/strapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: strapi
  namespace: strapi
  labels:
    app.kubernetes.io/name: strapi
    app.kubernetes.io/part-of: strapi
    app.kubernetes.io/component: cms
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - strapi.atlas.az.ameciclo.org
  rules:
    - host: strapi.atlas.az.ameciclo.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: strapi
                port:
                  number: 80
